--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" contant="新入社員デザイナー・藤根紗英のポートフォリオです。">
+    <meta name="keywords" content="ポートフォリオ,藤根,紗英,藤根紗英,コンタクト,連絡,デザイナー,デザイン,新入社員" />
     <title>藤根紗英のポートフォリオ</title>
     <!-- BootstrapのCSS読み込み -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -17,46 +19,42 @@
 
 <body>
 
-    <body>
-        <header>
-            <nav>
-                <ul>
-                    <li><a href="index.html" class="selected">Home</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
-            <div id="logo">
-                <img src="./images/profile.jpg" alt="藤根紗英" />
-                <h1>藤根　紗英</h1>
-            </div>
-        </header>
-        <div class="container">
-            <section>
-                <h2>About</h2>
-                <h3>自己紹介</h3>
-                <p>藤根　紗英　Sae Fujine</p>
-                <p>北海道札幌市出身のデザイナー。新入社員として日々成長中。</p>
-                <ul class="defaultlist list1">
-                    <li>趣味：　イラスト制作、ゲーム、読書</li>
-                    <li>やってみたいこと：　自分のイラストを使ったアプリを作る</li>
-                    <li>一言：　先輩に追い付け追い越せ目指して邁進します。</li>
-                </ul>
-                </ul>
-                <p>私のポートフォリオを見て気になった方は、<a href="contact.html">Contact</a>よりご連絡お願い致します。</p>
-                <h3>リンク</h3>
-                <ul class="defaultlist list1">
-                    <li><a href="https://github.com/sae-fujine" target="_blank">GitHub</a></li>
-                    <!--
-                    <li><a href="#" target="_blank">Facebook</a></li>
-                    <li><a href="#" target="_blank">Twitter</a></li>
-                    -->
-                </ul>
-            </section>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html" class="selected">Home</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+        <div id="logo">
+            <img src="./images/profile.jpg" alt="藤根紗英" />
+            <h1>藤根　紗英</h1>
         </div>
-        <footer>
-            <p>&copy; 2016 Sae Fujine.</p>
-        </footer>
+    </header>
 
-    </body>
+    <div class="container">
+        <section>
+            <h2>About</h2>
+            <h3>自己紹介</h3>
+            <p>藤根　紗英　Sae Fujine</p>
+            <p>北海道札幌市出身のデザイナー。新入社員として日々成長中。</p>
+            <ul class="defaultlist list1">
+                <li>趣味：　イラスト制作、ゲーム、読書</li>
+                <li>やってみたいこと：　自分のイラストを使ったアプリを作る</li>
+                <li>一言：　先輩に追い付け追い越せ目指して邁進します。</li>
+            </ul>
+            <p>私のポートフォリオを見て気になった方は、<a href="contact.html">Contact</a>よりご連絡お願い致します。</p>
+            <h3>リンク</h3>
+            <ul class="defaultlist list1">
+                <li><a href="https://github.com/sae-fujine" target="_blank">GitHub</a></li>
+            </ul>
+        </section>
+    </div>
+
+    <footer>
+        <p>&copy; 2016 Sae Fujine.</p>
+    </footer>
+
+</body>
 
 </html>
