--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" contant="新入社員デザイナー・藤根紗英のポートフォリオです。">
+    <meta name="description" content="新入社員デザイナー・藤根紗英のポートフォリオです。" />
     <meta name="keywords" content="ポートフォリオ,藤根,紗英,藤根紗英,コンタクト,連絡,デザイナー,デザイン,新入社員" />
     <title>藤根紗英のポートフォリオ</title>
     <!-- BootstrapのCSS読み込み -->
